--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 
+# ========== SERVER CONFIG ==========
+server.port=8080
+
+# ========== DATABASE CONFIG (MySQL) ==========
+spring.datasource.url=jdbc:mysql://localhost:3306/weather_diary?serverTimezone=Asia/Seoul
+spring.datasource.username='root'  # MySQL 유저명
+spring.datasource.password='zerobase' # MySQL 비밀번호
+
+# JPA 설정
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ========== EXTERNAL API CONFIG ==========
+weather.api.url=https://api.openweathermap.org/data/2.5/weather
+weather.api.key=9cb247054f7f3d90b8b0eeea67a7a54f
+
+# ========== SCHEDULING CONFIG ==========
+spring.task.scheduling.pool.size=5
